--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@
 language: objective-c
 osx_image: xcode7.1
 
-script:
-- set -o pipefail && xcodebuild test -project PiList/PiList.xcodeproj -scheme PiListTest | xcpretty -c
+xcode_project: PiList/PiList.xcodeproj
+xcode_scheme: PiListTest
