--- a/PiList/Resource/Dictionary.plist
+++ b/PiList/Resource/Dictionary.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>Bool</key>
 	<false/>
+	<key>Data</key>
+	<data></data>
 	<key>Date</key>
 	<date>2015-11-02T21:35:35Z</date>
 	<key>Number</key>
